--- a/docker-git-hello-world/Dockerfile
+++ b/docker-git-hello-world/Dockerfile
@@ -1,38 +1,75 @@
 # Updated as of Aug 16, 2017
-# Install FROM UBUNTU IMAGE
+# ----------------------------------------------------------------------------------
+# June 1, 2017: Oracle has archived JDK 7 and uses login to download JDK 7 hence
+# UBUNTU is unable to download JDK 7, we will hence demonstrate this with OPEN JDK 7
+#-----------------------------------------------------------------------------------
+# This file is used to create a docker image.
+# UBUNTU/CENTOS - > TOMCAT 7.x -> JDK 1.7 with all the updates, curl, vim
 FROM ubuntu:16.04
 
-# Author
-MAINTAINER brahmanand
 
-# RUN COMMAND BASICALLY runs the command in the terminal and creates an image.
-# Install all the updates for UBUNTU
-RUN apt-get update && apt-get install -y python-software-properties software-properties-common
+#Download the latest version of 7.x
+#Verify the version exists here or else change it: http://apache.rediris.es/tomcat/tomcat-7
+ENV TOMCAT_VERSION 7.0.88
 
-# Install all the updates for UBUNTU
-RUN apt-get install -y iputils-ping
+# Run an update to get all the security patches
+RUN apt-get -y update && apt-get -y upgrade
 
-# Adds the repository where JDK 8 can be obtained for UBUNTU
-RUN add-apt-repository ppa:webupd8team/java
+#Install curl/vim incase you want to debug. VIM - vi editor, curl is a utility which acts as http client which can be run from the unix prompt.
+RUN apt-get -y install software-properties-common
 
-# INSTALL THE VI EDITOR AND MYSQL-CLIENT
-RUN apt-get install -y vim
-RUN apt-get install -y mysql-client
+# June 1, 2017 : Commented out Oracle JDK installation procedure
+# RUN add-apt-repository ppa:webupd8team/java
+#The below instruction is very important, failing to add this will not allow you to install JDK
+# after the repository has been added.
+# RUN apt-get -y update
 
-#INSTALL ORACLE JDK 8 BY ACCEPTING YES
-RUN echo "oracle-java8-installer shared/accepted-oracle-license-v1-1 boolean true" | debconf-set-selections
+# June 1, 2017 : Moved all installation packages to a single line
+#Install CURL and VIM editors
+RUN apt-get -y install curl wget vim
 
-#INSTALL ALL the updates again and install MAVEN and JDK 8
-RUN apt-get update && apt-get install -y oracle-java8-installer maven
+# June 1, 2017 : Commented out Oracle JDK installation procedure
+# Accept the license
+# RUN echo "oracle-java7-installer shared/accepted-oracle-license-v1-1 boolean true" | debconf-set-selections
+# RUN apt-get -y install oracle-java7-installer
+# Define commonly used JAVA_HOME variable
+# ENV JAVA_HOME /usr/lib/jvm/java-7-oracle
 
-# ADD a directory called docker-git-hello-world inside the UBUNTU IMAGE where you will be moving all of these files under this 
-# DIRECTORY to
-ADD . /usr/local/docker-git-hello-world
+# June 1, 2017: Added OPEN JDK Installation 
+RUN add-apt-repository ppa:openjdk-r/ppa  
+RUN apt-get update -y
+RUN apt-get install -y openjdk-7-jdk 
+ENV JAVA_HOME /usr/lib/jvm/java-1.7.0-openjdk-amd64
 
-# AFTER YOU HAVE MOVED ALL THE FILES GO AHEAD CD into the directory and run mvn assembly.
-# Maven assembly will package the project into a JAR FILE which can be executed
-RUN cd /usr/local/docker-git-hello-world && mvn assembly:assembly
+#Download the latest version of 7.x
+#Verify the version exists here or else change it: http://apache.rediris.es/tomcat/tomcat-7
+ENV TOMCAT_VERSION 7.0.88
+# Get Tomcat
+# notice that i can add the same RUN command across multiple lines
+RUN wget --quiet --no-cookies http://apache.rediris.es/tomcat/tomcat-7/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz -O /tmp/tomcat.tgz && \
+tar xzvf /tmp/tomcat.tgz -C /opt && \
+mv /opt/apache-tomcat-${TOMCAT_VERSION} /opt/tomcat && \
+rm /tmp/tomcat.tgz && \
+rm -rf /opt/tomcat/webapps/examples && \
+rm -rf /opt/tomcat/webapps/docs && \
+rm -rf /opt/tomcat/webapps/ROOT
 
-#THE CMD COMMAND tells docker the command to run when the container is started up from the image. In this case we are
-# executing the java program as is to print Hello World.
-CMD ["java", "-cp", "/usr/local/docker-git-hello-world/target/docker-git-hello-world-0.0.1-SNAPSHOT-jar-with-dependencies.jar", "com.xchanging.docker.HelloWorldPing"]
+#Set Catalina HOME and JAVA_OPTS
+ENV CATALINA_HOME /opt/tomcat
+ENV PATH $PATH:$CATALINA_HOME/bin
+ENV JAVA_OPTS="-Xms1024m -Xmx1024m -Xss8192k -XX:PermSize=500m -XX:CMSInitiatingOccupancyFraction=50 -XX:+ExplicitGCInvokesConcurrent -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:NewRatio=1 -XX:SurvivorRatio=1  -Dorg.apache.cxf.JDKBugHacks.imageIO=false"
+
+#Expose this a port to the host machine.
+EXPOSE 8080
+EXPOSE 8009
+
+# install supervisor for debugging in case image is not built correctly.
+# supervisor lets you debug information.
+#RUN apt-get -y install supervisor
+#RUN service supervisor restart
+
+#The WORKDIR instruction sets the working directory for any RUN, CMD, ENTRYPOINT, COPY and ADD instructions that follow it in the Dockerfile.
+WORKDIR /opt/tomcat
+
+# Launch Tomcat
+CMD ["/opt/tomcat/bin/catalina.sh", "run"]
